# extract-audio

./: Cargo.toml  README.md
.github/workflows/: build-and-release.yml  build.yml  win-aarch64.yml  win-x86_64.yml
src/: main.rs
