[package]
name = "extract-audio"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

polars = { version = "0.54.4", features = ["full"] }

parquet = { version = "59" }
arrow = { version = "59" }

tempfile = "3"

rayon = { version = "1.12.0" }
anyhow = "1.0.102"
csv = "1.4.0"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false
